<resources>
    <string name="app_name">QuizWhiz</string>
    <string name="action_take_quiz">Take Quiz</string>
    <string name="action_upload_question">Upload a question</string>
    <string name="action_upload_question_bank">Upload questions from a file</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_take_aquiz">TakeAQuiz</string>
    <string name="change_cat">Change Category</string>
    <string name="nextQ">Next Question</string>
    <string name="title_activity_selectionscreen">Selectionscreen</string>
    <string name="title_activity_optionscreen">Optionscreen</string>
    <string name="title_activity_addcategory">Addcategory</string>
    <string name="title_activity_questionupload">QuestionUpload</string>
    <string name="title_activity_loginscreen">LogInScreen</string>
    <string name="Welcome_Msg">Welcome to QuizWhiz</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="user_Name">User Name :</string>
    <string name="password">Password :</string>
    <string name="eMail">Enter email </string>
    <string name="send">Send </string>
    <string name="logIn_SignUp">Sign In</string>
    <string name="forgot_pwd">Forget password?</string>
    <string name="title_activity_explanation_upload">ExplanationUpload</string>
    <string name="title_activity_answer_upload">title_activity_answer_upload</string>
    <string name="title_activity_upload_afile">UploadAFile</string>
    <string name="option1">Option 1</string>
    <string name="option2">Option 2</string>
    <string name="option3">Option 3</string>
    <string name="option4">Option 4</string>
    <string-array name="grade_array">
        <item>Select Grade</item>
        <item>Pre-K</item>
        <item>Kindergarten</item>
        <item>Grade 1</item>
        <item>Grade 2</item>
        <item>Grade 3</item>
        <item>Grade 4</item>
        <item>Grade 5</item>
        <item>Grade 6</item>
        <item>Grade 7</item>
        <item>Grade 8</item>
        <item>Grade 9</item>
        <item>Grade 10</item>
    </string-array>


    <string name="congrats">Congratulations!</string>
    <string name="scoreString">You scored</string>
    <string name="quizWhiz">You are a</string>
    <string name="title_activity_quiz_results">QuizResults</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
</resources>
