<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.wischase.view.menu.ScrollingActivity">


        <item android:id="@+id/action_takeQuiz"
            android:orderInCategory="1"
            android:title="@string/action_take_quiz"
            app:showAsAction="never"
            tools:ignore="AppCompatResource"
            />
         <item android:id="@+id/action_upload_question"
             android:orderInCategory="2"
             android:title="@string/action_upload_question"
             app:showAsAction="never"
             tools:ignore="AppCompatResource"/>
         <item android:id="@+id/action_upload_bank"
            android:title="@string/action_upload_question_bank"
             android:orderInCategory="3"
             app:showAsAction="never"
             tools:ignore="AppCompatResource"/>
         <item android:id="@+id/action_exit"
            android:orderInCategory="4"
             android:title="@string/action_exit"
              app:showAsAction="never"
             tools:ignore="AppCompatResource"/>

    </menu>