<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.wischase.activity.LogInScreen"
    tools:showIn="@layout/activity_log_in_screen"
    android:background="@color/colorBackground">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <com.wischase.view.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeText"
        android:text="@string/Welcome_Msg"
        android:textColor="@color/colorText"
        android:layout_row="1"
        android:layout_column="0"
        android:textSize="@dimen/welcomeTextSize"
        android:layout_gravity="top"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/logInType"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_rowSpan="9">

        <com.wischase.view.CustomRadioButton
            android:layout_row="1"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/teacher"
            android:id="@+id/teacher"
            android:textSize="20sp"
            android:minHeight="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="150dp"
            />

        <com.wischase.view.CustomRadioButton
            android:textColor="@android:color/white"
            android:layout_row="2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/student"
            android:id="@+id/student"
            android:minHeight="20dp"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="150dp"
            />

        </RadioGroup>

    <com.wischase.view.CustomTextView
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:id="@+id/userName"
        android:text="@string/user_Name"
        android:textColor="@color/colorText"
        android:layout_row="2"
        android:layout_column="0"
        android:textSize="@dimen/questionTextSize"
        android:layout_gravity="left"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="15dp" />

    <EditText
        android:layout_width="185dp"
        android:layout_height="40dp"
        android:id="@+id/userNameEntry"
        android:textColor="@color/colorBackground"
        android:background="@color/colorText"
        android:layout_row="2"
        android:layout_column="0"
        android:padding="10dip"
        android:textSize="@dimen/questionTextSize"
        android:layout_gravity="left"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="150dp" />

        <com.wischase.view.CustomTextView
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:text="@string/password"
            android:textColor="@color/colorText"
            android:layout_row="3"
            android:layout_column="0"
            android:textSize="@dimen/questionTextSize"
            android:layout_gravity="left"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="15dp" />

        <EditText
            android:layout_width="185dp"
            android:layout_height="40dp"
            android:id="@+id/passwordEntry"
            android:textColor="@color/colorBackground"
            android:background="@color/colorText"
            android:layout_row="3"
            android:layout_column="0"
            android:padding="10dip"
            android:textSize="@dimen/questionTextSize"
            android:layout_gravity="left"
            android:inputType="textPassword"
            android:password="true"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="150dp" />

        <com.wischase.view.CustomTextView
            android:id="@+id/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pwd"
            android:layout_row="4"
            android:layout_column="0"
            android:linksClickable="true"
            android:textColor="@color/colorText"
            android:textStyle="italic"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="150dp"
            android:onClick="signIn"
            />

    <com.wischase.view.CustomButton
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:id="@+id/signUp"
        android:text="@string/logIn_SignUp"
        android:textColor="@color/colorText"
        android:background="@color/colorColumn"
        android:layout_row="5"
        android:layout_column="0"
        android:padding="10dip"
        android:textSize="@dimen/questionTextSize"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="120dp"
        android:onClick="signIn" />

</GridLayout>
</RelativeLayout>
