<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.wischase.activity.QuizResults"
    tools:showIn="@layout/activity_quiz_results"
    android:background="@color/colorBackground">




<com.wischase.view.CustomTextView
        android:text = "@string/congrats"
        android:textSize="@dimen/welcomeTextSize"
        android:layout_gravity="center_horizontal"
          android:layout_row="0"
          android:layout_column="0" />

    <com.wischase.view.CustomTextView
        android:text = "Surabhi"
        android:id="@+id/userName"
        android:textSize="@dimen/welcomeTextSize"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_row="1" />

    <com.wischase.view.CustomTextView
        android:text = "@string/scoreString"
        android:textSize="@dimen/welcomeTextSize"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_row="2" />

    <com.wischase.view.CustomTextView
        android:text = "18 out of 20"
        android:textSize="@dimen/welcomeTextSize"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:id="@+id/showResult"
        android:layout_row="3" />


    <com.wischase.view.CustomTextView
        android:text = "@string/quizWhiz"
        android:textSize="@dimen/welcomeTextSize"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_row="4" />
    <ImageView  android:layout_gravity="center_horizontal"
        android:src="@mipmap/quizwhiz_icon"
        android:layout_column="0"
        android:layout_height="wrap_content"
        android:layout_row="5" />

    <GridLayout
        android:layout_row="6"
        android:layout_column="0">


        <com.wischase.view.CustomButton
            android:text = " Main menu"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_gravity="center_horizontal"
            android:onClick="nextSetQuestion"
            />

        <com.wischase.view.CustomButton
            android:text="Answer more questions"
            android:layout_column="2"
            android:onClick="onClickQuizAgain"
            android:layout_row="2"
            />

    </GridLayout>




</GridLayout>